adding 2 methods handlers